--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  </name>
         </p>
 		<p>I'm Yunlu Yan, currently a Ph.D. Student at Robotics and Autonomous Systems Thrust, Hong Kong University of Science and Technology (GuangZhou), supervised by Prof. <a href="https://sites.google.com/site/indexlzhu/home">Lei Zhu</a>. 
-       Before that, I received my master degree at the School of Computer Science and Technology, Harbin Institute of Technology (Shenzhen), supervised by Prof. <a href="https://scholar.google.com/citations?user=zOVgYQYAAAAJ&hl=zh-CN">Yong Xu</a>. 
+       Before that, I received my master degree at the School of Computer Science and Technology, Harbin Institute of Technology (ShenZhen), supervised by Prof. <a href="https://scholar.google.com/citations?user=zOVgYQYAAAAJ&hl=zh-CN">Yong Xu</a>. 
       My research interests focus on <font color='blue'>computer vision, AI for healthcare, and federated learning </font>. 
 		</p>
 
@@ -95,7 +95,7 @@
 
       <td width="80%" valign="middle">
       <p>
-      <stronghuge>Harbin Institute of Technology (Shenzhen)</stronghuge><br />
+      <stronghuge>Harbin Institute of Technology (ShenZhen)</stronghuge><br />
       <strong>Master student</strong>&nbsp;&nbsp;&bull; Sep. 2020 - Dec. 2022 <br />
       Advisors: &nbsp; Prof. <a href="https://scholar.google.com/citations?user=zOVgYQYAAAAJ&hl=zh-CN">Yong Xu</a>
       </p>
@@ -238,7 +238,7 @@
           <heading>Honors & Scholarships</heading>
           <div style="line-height:25px">
           <p>
-		  <li> <stronghuge>Robust Logo Detection (ACMM 2021 workshop, held by Alibaba) </stronghuge> <strong>, Top 20 award (19/36490)</strong> ,&nbsp; 2021<br/>
+		  <li> <stronghuge>Robust Logo Detection (ACM MM 2021 workshop, held by Alibaba) </stronghuge> <strong>, Top 20 award (19/36490)</strong> ,&nbsp; 2021<br/>
           </p>
           </div>
         </td>
@@ -256,7 +256,7 @@
 				<td>
 				<br>
 				<p align="left"><font size="2">
-				Last updated on Oct. 5th, 2022
+				Last updated on Mar. 15, 2023
 				<p align="middle"><font size="2">
 				This awesome template borrowed from <a href="https://people.eecs.berkeley.edu/~barron/">here</a> and <a href="https://github.com/Wangt-CN/Wangt-CN.github.io">here</a>.
 				</tbody></table>
