--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <td width="100%" valign="middle">
           <heading>News</heading>
           <p>
+      <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>2 papers were accepted by ICLR 2025.</smalll><br/>
+      <li> <strongsmall>[2024/06]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by MICCAI 2024.</smalll><br/>
+      <li> <strongsmall>[2024/01]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by IEEE JBHI.</smalll><br/>
       <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by IEEE TNNLS.</smalll><br/>
       <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>Start my Ph.D. study, at the day of Feb. 8, 2023!</smalll><br/>
       <li> <strongsmall>[2022/11]</strongsmall> &nbsp;&nbsp;<smalll>I passed my oral defense for the master degree, at the day of Nov. 26, 2022!</smalll><br/>
@@ -144,8 +147,8 @@
 
       <tr>
         <td width="100%" valign="middle">
-          Conference: <strong> MICCAI </strong> (1) <br/>
-          Journal: <strong> TMI </strong> (2) <strong> &nbsp;&nbsp; TNNLS </strong> (1) <br/>
+          Conference: <strong> MICCAI </strong> (2) <strong> ICLR </strong> (2)<br/>
+          Journal: <strong> TMI </strong> (2) <strong> &nbsp;&nbsp; TNNLS </strong> (1) <strong> &nbsp;&nbsp; JBHI </strong> (1)<br/>
         </td>
       </tr>
       </table>
