--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <tr>
         <td width="100%" valign="middle">
-          Conference: <strong> MICCAI </strong> (2) <strong> ICLR </strong> (2)<br/>
+          Conference: <strong> MICCAI </strong> (2) <strong> &nbsp;&nbsp; ICLR </strong> (2)<br/>
           Journal: <strong> TMI </strong> (2) <strong> &nbsp;&nbsp; TNNLS </strong> (1) <strong> &nbsp;&nbsp; JBHI </strong> (1)<br/>
         </td>
       </tr>
@@ -226,7 +226,8 @@
           <heading>Academic Service</heading>
           <div style="line-height:25px">
           <p>
-		  <li> <stronghuge>Conference Reviewer:</stronghuge> &nbsp; ACM MM'2022&nbsp; MIUA'2022<br/>
+		  <li> <stronghuge>Conference Reviewer:</stronghuge> &nbsp; ACM MM,&nbsp; MIUA,&nbsp;ICLR,&nbsp;MICCAI<br/>
+                  <li> <stronghuge>Journal Reviewer:</stronghuge> &nbsp; IEEE TMI,&nbsp; IEEE TAI,&nbsp;IEEE TNNLS,&nbsp; IEEE TIFS,&nbsp; IEEE SPL<br/>
           </p>
           </div>
         </td>
