--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <heading>Honors & Scholarships</heading>
           <div style="line-height:25px">
           <p>
-		  <li> <stronghuge>Robust Logo Detection (ACM MM 2021 workshop, held by Alibaba) </stronghuge> <strong>, Top 20 award (19/36490)</strong> ,&nbsp; 2021<br/>
+		  <li>  <strong>IEEE TMI Distinguished Reviewer</strong> ,&nbsp; 2024<br/>
           </p>
           </div>
         </td>
