--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
         <td width="100%" valign="middle">
-          <heading>Honors & Scholarships</heading>
+          <heading>Awards</heading>
           <div style="line-height:25px">
           <p>
 		  <li>  <strong>IEEE TMI Distinguished Reviewer</strong> ,&nbsp; 2024<br/>
