--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <td width="100%" valign="middle">
           <heading>News</heading>
           <p>
-      <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by IEEE TCYB 2025.</smalll><br/>
+      <li> <strongsmall>[2025/11]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by IEEE TCYB.</smalll><br/>
       <li> <strongsmall>[2025/06]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by MICCAI 2025.</smalll><br/>
       <li> <strongsmall>[2025/04]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by IEEE JBHI.</smalll><br/>     
       <li> <strongsmall>[2025/02]</strongsmall> &nbsp;&nbsp;<smalll>1 paper was accepted by CVPR 2025.</smalll><br/>
